# test

./: CMakeLists.txt  main.cpp
src/: memcached_client.cpp  memcached_client.hpp
src/encode/: encoder.cpp  encoder.hpp
src/gf256_solver/: gf256_solver.cpp  gf256_solver.hpp
src/placement/: placement.cpp  placement.hpp  placement_strategy1.cpp  placement_strategy2.cpp  placement_strategy3.cpp  placement_strategy4.cpp  placement_strategy5.cpp  placement_strategy6.cpp  placement_strategy7.cpp
src/repair/: repair.cpp  repair.hpp  repair_strategy1.cpp
